--- a/mpush_ios_demo/mpush_ios_demo/Main.storyboard
+++ b/mpush_ios_demo/mpush_ios_demo/Main.storyboard
@@ -1,61 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Lpq-cc-9Pc">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Lpq-cc-9Pc">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--消息-->
         <scene sceneID="Udm-Db-wYS">
             <objects>
-                <viewController id="Neu-kT-2le" customClass="LZLMessagesViewController" sceneMemberID="viewController">
+                <viewController id="Neu-kT-2le" customClass="MessageViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ag0-w3-Dkl"/>
                         <viewControllerLayoutGuide type="bottom" id="kR5-Tj-TXT"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="v07-sq-yyu">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lqk-pl-hx8">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <items>
-                                    <navigationItem title="推送消息" id="j2Y-fd-ctm"/>
-                                </items>
-                            </navigationBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="CQf-bv-hBE">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_background" translatesAutoresizingMaskIntoConstraints="NO" id="2Gr-1w-n2h">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="286.33333333333331"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="K2b-Zc-w8n">
+                                <rect key="frame" x="16" y="286.33333333333326" width="361" height="482.66666666666674"/>
+                                <color key="backgroundColor" red="0.94901960784313721" green="0.95294117647058818" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pushMessageCell" id="t9Z-mj-osT">
-                                        <rect key="frame" x="0.0" y="22" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Qgj-LW-7kP" customClass="MessageSingleTableViewCell">
+                                        <rect key="frame" x="0.0" y="55.333332061767578" width="361" height="45"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="t9Z-mj-osT" id="FbX-O9-5zR">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Qgj-LW-7kP" id="cr4-xH-gCc">
+                                            <rect key="frame" x="0.0" y="0.0" width="361" height="45"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <sections/>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.94901960784313721" green="0.95294117647058818" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="lqk-pl-hx8" secondAttribute="trailing" id="E6B-tF-PAg"/>
-                            <constraint firstItem="lqk-pl-hx8" firstAttribute="leading" secondItem="v07-sq-yyu" secondAttribute="leading" id="Kwq-cG-kgV"/>
-                            <constraint firstItem="CQf-bv-hBE" firstAttribute="bottom" secondItem="kR5-Tj-TXT" secondAttribute="top" id="NPF-4K-tXp"/>
-                            <constraint firstItem="lqk-pl-hx8" firstAttribute="leading" secondItem="CQf-bv-hBE" secondAttribute="leading" id="aIt-ou-VKd"/>
-                            <constraint firstItem="lqk-pl-hx8" firstAttribute="top" secondItem="ag0-w3-Dkl" secondAttribute="bottom" id="jhA-J5-vUr"/>
-                            <constraint firstItem="lqk-pl-hx8" firstAttribute="trailing" secondItem="CQf-bv-hBE" secondAttribute="trailing" id="ujd-om-dov"/>
-                            <constraint firstItem="CQf-bv-hBE" firstAttribute="top" secondItem="lqk-pl-hx8" secondAttribute="bottom" id="zmz-Se-BGl"/>
+                            <constraint firstItem="2Gr-1w-n2h" firstAttribute="leading" secondItem="v07-sq-yyu" secondAttribute="leading" id="9IY-eh-shg"/>
+                            <constraint firstAttribute="trailing" secondItem="2Gr-1w-n2h" secondAttribute="trailing" id="Gjl-L0-uF5"/>
+                            <constraint firstItem="K2b-Zc-w8n" firstAttribute="leading" secondItem="v07-sq-yyu" secondAttribute="leadingMargin" id="KOS-gy-uXz"/>
+                            <constraint firstItem="K2b-Zc-w8n" firstAttribute="top" secondItem="2Gr-1w-n2h" secondAttribute="bottom" id="XqP-kA-lpi"/>
+                            <constraint firstItem="kR5-Tj-TXT" firstAttribute="top" secondItem="K2b-Zc-w8n" secondAttribute="bottom" id="ZcA-1s-ztV"/>
+                            <constraint firstItem="2Gr-1w-n2h" firstAttribute="top" secondItem="v07-sq-yyu" secondAttribute="top" id="fO4-UQ-gh1"/>
+                            <constraint firstItem="2Gr-1w-n2h" firstAttribute="height" secondItem="v07-sq-yyu" secondAttribute="height" multiplier="273:812" id="gnV-IY-pSg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="K2b-Zc-w8n" secondAttribute="trailing" id="zsP-bk-aFq"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="消息" image="icon01" id="0Ea-3o-nrG"/>
                     <connections>
-                        <outlet property="pushMessageTableView" destination="CQf-bv-hBE" id="Pml-wW-nfs"/>
+                        <outlet property="messageTableView" destination="K2b-Zc-w8n" id="Xke-hi-2un"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uUJ-t2-jGn" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -71,11 +68,11 @@
                         <viewControllerLayoutGuide type="bottom" id="pYR-oW-UOW"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="LSy-Tw-09U">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="btb-uh-VVi">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                                 <items>
                                     <navigationItem title="设置中心" id="dFv-qG-NbY"/>
                                 </items>
@@ -124,25 +121,25 @@
                         <viewControllerLayoutGuide type="bottom" id="5LW-kd-XOG"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="VWb-NJ-uPw">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="67r-Hq-QcM">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="personalDataCell" id="Yov-gI-2AX">
-                                        <rect key="frame" x="0.0" y="22" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="50" width="393" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Yov-gI-2AX" id="B5N-dH-ANG">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cF1-uk-Fuc">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                                 <items>
                                     <navigationItem title="信息中心" id="kKf-hx-9qk"/>
                                 </items>
@@ -170,8 +167,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="icon01" width="24" height="24"/>
+        <image name="home_background" width="1500" height="1068"/>
+        <image name="icon01" width="21" height="18"/>
         <image name="icon02" width="24" height="24"/>
-        <image name="icon03" width="24" height="24"/>
+        <image name="icon03" width="20" height="20"/>
     </resources>
 </document>
