--- a/mpush_ios_demo/mpush_ios_demo/Main.storyboard
+++ b/mpush_ios_demo/mpush_ios_demo/Main.storyboard
@@ -184,26 +184,36 @@
                                     <action selector="limitNoteAction:" destination="oiA-pW-YX3" eventType="touchUpInside" id="Lba-jM-ujA"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="huO-ut-Y1R">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="huO-ut-Y1R">
                                 <rect key="frame" x="16" y="301" width="361" height="468"/>
-                                <color key="backgroundColor" red="0.94901960784313721" green="0.95294117647058818" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.94901960784313721" green="0.95294117647058818" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="tky-aI-g5O">
+                                        <rect key="frame" x="0.0" y="55.333332061767578" width="361" height="45"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tky-aI-g5O" id="p4o-PD-D8z">
+                                            <rect key="frame" x="0.0" y="0.0" width="361" height="45"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="0.94901960784313721" green="0.95294117647058818" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="huO-ut-Y1R" firstAttribute="leading" secondItem="LSy-Tw-09U" secondAttribute="leadingMargin" id="4EC-b2-5QT"/>
                             <constraint firstItem="b4Y-dY-0ZE" firstAttribute="leading" secondItem="LSy-Tw-09U" secondAttribute="leading" id="4c2-v6-nGV"/>
                             <constraint firstAttribute="trailing" secondItem="b4Y-dY-0ZE" secondAttribute="trailing" id="8ug-Oc-bBL"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Oz7-1r-B19" secondAttribute="trailing" constant="16" id="GSJ-3Z-dcr"/>
                             <constraint firstItem="pYR-oW-UOW" firstAttribute="top" secondItem="huO-ut-Y1R" secondAttribute="bottom" id="H47-zI-uVG"/>
                             <constraint firstItem="mvE-TZ-Ssa" firstAttribute="top" secondItem="PqE-9B-MGc" secondAttribute="bottom" constant="50" id="K71-dU-nSy"/>
+                            <constraint firstAttribute="trailing" secondItem="huO-ut-Y1R" secondAttribute="trailing" constant="16" id="LNw-ki-Q8c"/>
                             <constraint firstItem="Oz7-1r-B19" firstAttribute="centerY" secondItem="mvE-TZ-Ssa" secondAttribute="centerY" id="P0K-fG-3Zc"/>
+                            <constraint firstItem="huO-ut-Y1R" firstAttribute="leading" secondItem="LSy-Tw-09U" secondAttribute="leading" constant="16" id="SVA-0r-qef"/>
                             <constraint firstItem="huO-ut-Y1R" firstAttribute="top" secondItem="Oz7-1r-B19" secondAttribute="bottom" constant="15" id="Tfb-It-6Ph"/>
                             <constraint firstItem="PqE-9B-MGc" firstAttribute="width" secondItem="b4Y-dY-0ZE" secondAttribute="width" multiplier="180:375" id="Xhk-Pl-InH"/>
                             <constraint firstItem="b4Y-dY-0ZE" firstAttribute="top" secondItem="LSy-Tw-09U" secondAttribute="top" id="blB-rB-CVx"/>
                             <constraint firstItem="S7I-aI-MGQ" firstAttribute="top" secondItem="LGN-g5-PNJ" secondAttribute="bottom" constant="72" id="dhl-l1-oLJ"/>
                             <constraint firstItem="mvE-TZ-Ssa" firstAttribute="leading" secondItem="PqE-9B-MGc" secondAttribute="leading" id="jqv-lj-IpM"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="huO-ut-Y1R" secondAttribute="trailing" id="lwz-f1-5nN"/>
                             <constraint firstItem="Oz7-1r-B19" firstAttribute="leading" secondItem="mvE-TZ-Ssa" secondAttribute="trailing" constant="-10" id="lxk-wv-bhW"/>
                             <constraint firstItem="b4Y-dY-0ZE" firstAttribute="height" secondItem="LSy-Tw-09U" secondAttribute="height" multiplier="273:812" id="p8E-bi-9xH"/>
                             <constraint firstItem="PqE-9B-MGc" firstAttribute="top" secondItem="S7I-aI-MGQ" secondAttribute="bottom" constant="12" id="rIW-Pg-2Lo"/>
@@ -212,6 +222,9 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="设置" image="icon02" id="OAl-wD-k6a"/>
+                    <connections>
+                        <outlet property="settingTableView" destination="huO-ut-Y1R" id="h8t-bb-FX3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LD4-8a-4Qe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
