--- a/mpush_ios_demo/mpush_ios_demo/Main.storyboard
+++ b/mpush_ios_demo/mpush_ios_demo/Main.storyboard
@@ -254,7 +254,7 @@
         <!--信息-->
         <scene sceneID="Fbo-Db-v5s">
             <objects>
-                <viewController id="JxH-us-ioW" customClass="PersonalViewController" sceneMemberID="viewController">
+                <viewController id="JxH-us-ioW" customClass="InformationViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="i7m-bJ-mQh"/>
                         <viewControllerLayoutGuide type="bottom" id="5LW-kd-XOG"/>
@@ -263,46 +263,63 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="67r-Hq-QcM">
-                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="personalDataCell" id="Yov-gI-2AX">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Yov-gI-2AX" id="B5N-dH-ANG">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="information_background" translatesAutoresizingMaskIntoConstraints="NO" id="QmE-4K-QpJ">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="267.33333333333331"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="QmE-4K-QpJ" secondAttribute="height" multiplier="375:255" id="EaY-98-QoT"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="YlQ-aZ-cmX">
+                                <rect key="frame" x="15" y="93" width="45" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="DDN-ak-kzQ"/>
+                                    <constraint firstAttribute="width" constant="45" id="cDj-em-8sG"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="阿里云推送Demo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1RK-nD-adH">
+                                <rect key="frame" x="72" y="88" width="158" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                <color key="textColor" red="0.16078431372549018" green="0.19215686274509802" blue="0.2196078431372549" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=".com.aliyun.emas.pocdemo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PvN-VO-kae">
+                                <rect key="frame" x="72.000000000000014" y="116" width="198.33333333333337" height="19.333333333333343"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" red="0.63137254901960782" green="0.6705882352941176" blue="0.70196078431372544" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="pdo-9t-8fZ">
+                                <rect key="frame" x="0.0" y="164.33333333333331" width="393" height="571.66666666666674"/>
+                                <color key="backgroundColor" red="0.94901960784313721" green="0.95294117647058818" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="pdo-9t-8fZ" secondAttribute="height" multiplier="750:1091" id="OPN-rf-GaE"/>
+                                </constraints>
                             </tableView>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cF1-uk-Fuc">
-                                <rect key="frame" x="0.0" y="59" width="393" height="44"/>
-                                <items>
-                                    <navigationItem title="信息中心" id="kKf-hx-9qk"/>
-                                </items>
-                            </navigationBar>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.94901960784313721" green="0.95294117647058818" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="cF1-uk-Fuc" secondAttribute="trailing" id="8As-t1-pGA"/>
-                            <constraint firstItem="67r-Hq-QcM" firstAttribute="bottom" secondItem="5LW-kd-XOG" secondAttribute="top" id="GiU-Ch-qFt"/>
-                            <constraint firstItem="cF1-uk-Fuc" firstAttribute="trailing" secondItem="67r-Hq-QcM" secondAttribute="trailing" id="L8s-sE-m1j"/>
-                            <constraint firstItem="67r-Hq-QcM" firstAttribute="top" secondItem="cF1-uk-Fuc" secondAttribute="bottom" id="MZP-YV-BYT"/>
-                            <constraint firstItem="cF1-uk-Fuc" firstAttribute="top" secondItem="i7m-bJ-mQh" secondAttribute="bottom" id="Ntn-G7-6GI"/>
-                            <constraint firstItem="cF1-uk-Fuc" firstAttribute="leading" secondItem="VWb-NJ-uPw" secondAttribute="leading" id="bgh-tT-DST"/>
-                            <constraint firstItem="cF1-uk-Fuc" firstAttribute="leading" secondItem="67r-Hq-QcM" secondAttribute="leading" id="xRv-r6-oO7"/>
+                            <constraint firstItem="YlQ-aZ-cmX" firstAttribute="leading" secondItem="VWb-NJ-uPw" secondAttribute="leading" constant="15" id="00E-I4-wip"/>
+                            <constraint firstItem="pdo-9t-8fZ" firstAttribute="leading" secondItem="VWb-NJ-uPw" secondAttribute="leading" id="02z-hh-vRs"/>
+                            <constraint firstItem="YlQ-aZ-cmX" firstAttribute="top" secondItem="i7m-bJ-mQh" secondAttribute="bottom" constant="34" id="D7q-UD-ies"/>
+                            <constraint firstAttribute="trailing" secondItem="QmE-4K-QpJ" secondAttribute="trailing" id="HXS-Gd-79F"/>
+                            <constraint firstItem="1RK-nD-adH" firstAttribute="top" secondItem="i7m-bJ-mQh" secondAttribute="bottom" constant="29" id="IHO-gV-S6x"/>
+                            <constraint firstItem="PvN-VO-kae" firstAttribute="leading" secondItem="1RK-nD-adH" secondAttribute="leading" id="MYl-io-SGk"/>
+                            <constraint firstItem="QmE-4K-QpJ" firstAttribute="top" secondItem="VWb-NJ-uPw" secondAttribute="top" id="VeJ-eI-Ddr"/>
+                            <constraint firstItem="1RK-nD-adH" firstAttribute="leading" secondItem="YlQ-aZ-cmX" secondAttribute="trailing" constant="12" id="cY1-hN-rZ2"/>
+                            <constraint firstItem="PvN-VO-kae" firstAttribute="top" secondItem="1RK-nD-adH" secondAttribute="bottom" constant="4" id="eEr-Am-fZR"/>
+                            <constraint firstAttribute="trailing" secondItem="pdo-9t-8fZ" secondAttribute="trailing" id="hXG-eG-9Pr"/>
+                            <constraint firstItem="QmE-4K-QpJ" firstAttribute="leading" secondItem="VWb-NJ-uPw" secondAttribute="leading" id="x5F-79-S1e"/>
+                            <constraint firstItem="pdo-9t-8fZ" firstAttribute="top" secondItem="PvN-VO-kae" secondAttribute="bottom" constant="29" id="ymE-h2-K3t"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="信息" image="icon03" id="8mJ-Hh-VrR"/>
                     <connections>
-                        <outlet property="persionalDataTableView" destination="67r-Hq-QcM" id="oKc-bA-PDi"/>
+                        <outlet property="informationTableView" destination="pdo-9t-8fZ" id="w7t-cQ-jva"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QuD-FA-uVW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1425" y="-2182"/>
+            <point key="canvasLocation" x="-1425.1908396946565" y="-2182.394366197183"/>
         </scene>
     </scenes>
     <resources>
@@ -310,6 +327,8 @@
         <image name="icon01" width="21" height="18"/>
         <image name="icon02" width="24" height="24"/>
         <image name="icon03" width="20" height="20"/>
+        <image name="information_background" width="750" height="510"/>
+        <image name="logo" width="90" height="90"/>
         <image name="setting_description" width="32" height="32"/>
     </resources>
 </document>
