--- a/mpush_ios_demo/mpush_ios_demo/Main.storyboard
+++ b/mpush_ios_demo/mpush_ios_demo/Main.storyboard
@@ -122,13 +122,13 @@
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="286.33333333333331"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="高级功能" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S7I-aI-MGQ">
-                                <rect key="frame" x="15.999999999999993" y="131" width="97.333333333333314" height="28.666666666666657"/>
+                                <rect key="frame" x="15.999999999999993" y="175" width="97.333333333333314" height="28.666666666666657"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PqE-9B-MGc">
-                                <rect key="frame" x="16" y="171.66666666666666" width="188.66666666666666" height="37.666666666666657"/>
+                                <rect key="frame" x="16" y="215.66666666666666" width="188.66666666666666" height="37.666666666666657"/>
                                 <attributedString key="attributedText">
                                     <fragment content="欢迎来到阿里云移动推送">
                                         <attributes>
@@ -164,14 +164,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="setting_description" translatesAutoresizingMaskIntoConstraints="NO" id="mvE-TZ-Ssa">
-                                <rect key="frame" x="16" y="259.33333333333331" width="18" height="18"/>
+                                <rect key="frame" x="16" y="303.33333333333331" width="18" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="18" id="4z5-0B-Q9z"/>
                                     <constraint firstAttribute="width" constant="18" id="aWV-eW-LvF"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oz7-1r-B19">
-                                <rect key="frame" x="24" y="251" width="337" height="35"/>
+                                <rect key="frame" x="24" y="295" width="337" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="d9o-Q4-v2M"/>
                                 </constraints>
@@ -185,7 +185,7 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="huO-ut-Y1R">
-                                <rect key="frame" x="16" y="301" width="361" height="468"/>
+                                <rect key="frame" x="16" y="345" width="361" height="424"/>
                                 <color key="backgroundColor" red="0.94901960784313721" green="0.95294117647058818" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="tky-aI-g5O">
@@ -222,13 +222,31 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="设置" image="icon02" id="OAl-wD-k6a"/>
+                    <navigationItem key="navigationItem" id="X99-ca-65V"/>
                     <connections>
                         <outlet property="settingTableView" destination="huO-ut-Y1R" id="h8t-bb-FX3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LD4-8a-4Qe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2490.8396946564885" y="-2168.3098591549297"/>
+            <point key="canvasLocation" x="-1498" y="-2173"/>
+        </scene>
+        <!--设置-->
+        <scene sceneID="MDH-8i-acf">
+            <objects>
+                <navigationController id="iZW-vo-2cG" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="设置" image="icon02" id="Co2-bw-pdf"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="tPw-Kf-3Fl">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="oiA-pW-YX3" kind="relationship" relationship="rootViewController" id="AbY-zp-iDg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fVz-mP-qeJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2396" y="-2173"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="7D5-PA-eoq">
@@ -243,7 +261,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="Neu-kT-2le" kind="relationship" relationship="viewControllers" id="cm1-vy-Re5"/>
-                        <segue destination="oiA-pW-YX3" kind="relationship" relationship="viewControllers" id="MsL-sH-Wci"/>
+                        <segue destination="iZW-vo-2cG" kind="relationship" relationship="viewControllers" id="ABF-m3-F3X"/>
                         <segue destination="JxH-us-ioW" kind="relationship" relationship="viewControllers" id="DPp-qP-5Oe"/>
                     </connections>
                 </tabBarController>
@@ -319,7 +337,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QuD-FA-uVW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1425.1908396946565" y="-2182.394366197183"/>
+            <point key="canvasLocation" x="-305" y="-2182"/>
         </scene>
     </scenes>
     <resources>
